# TSO_project

./: .gitignore  LICENSE  README.fr.md  README.md  TSO_project.ipynb  TSO_projectOK.ipynb  algorithm.py  environment_SSD7.yaml  log.txt  notes.txt  projet.ipynb  requirements.yaml  retinanet.ipynb  school_environment.yaml  ssd7_training.ipynb
BOM/: BOM.xls
Gestion/: Analyse_Risques.xlsm  Felix_Samuel_Estimations.docx  Final school project timeline.docx  Planification.docx  ProjetTourelleLaser_Felix_Samuel.docx  Untitled Diagram.drawio  rapport projet 5e session.docx  ~$ojetTourelleLaser_Felix_Samuel.docx  ~$pport projet 5e session.docx
Logiciels/jetson-containers/UArmForROS/: CMakeLists.txt  README.md
Logiciels/jetson-containers/UArmForROS/config/: kth_uarm_core_config.yaml
Logiciels/jetson-containers/UArmForROS/launch/: kth_uarm.launch
Matériel/: BM04B-SRSS-TB(LF)(SN)_JST_Sales.pdf:Zone.Identifier  DCJ235-05-A-K1-A_Global_Connector_Technology.pdf:Zone.Identifier  ESP-WROOM-32_Olimex_LTD.pdf:Zone.Identifier  Schlib1.SchLib  install_kicad.sh  uARM.SchDoc
PCB/: Integrated_Library1.LibPkg  PcbLib1.PcbLib
Rapport/: .~lock.Projet.docx#  .~lock.Rapport_Projet_Session_5.docx#  Projet.docx
Schémas/: 3-1734035-2_TE_Connectivity.pdf_Zone.Identifier  Archi_materielle_ProjetFinal.xml  Architecture_logicielle_projet.xml  BBB0.drawio  BBB1.drawio  CAN.drawio  LIEN.drawio  STM.drawio  Schémas bloc.drawio  Trame CAN.xlsx  architectures.drawio  architectures2.drawio
UArmForROS/: .rosinstall  setup.sh
documentation/: .~lock.BOM.xls#  Analyse_Risques2.xlsm  BOM.xls  (+9 more)
(+745 files in other folders)
